# Cpp_ProjectTemplate

./: .clang-format  AddBoost.cmake  AddGoogleTests.cmake  CMakeLists.txt  TargetBuild.cmake  build.sh
schemes/: Uniteller_SignalsManagerLib.wsd
src/: CMakeLists.txt  default.cpp  default.hpp  export.hpp
src/TasksLib/: autogenerated_export.hpp  default.hpp  export.hpp
tests/: AddSuitTests.cmake  AddUnitTests.cmake  CMakeLists.txt  test-suit-template-2.cpp  test-unit-template.cpp
tests/suit-tests/: test-suit-template-1.cpp  test-suit-template-2.cpp
tests/suit-tests/OpenSources/HackerRank/: template-1.cpp
tests/unit-tests/: template-3.cpp  test-unit-boost-template.cpp  test-unit-template-1.cpp  test-unit-template-2.cpp
tests/unit-tests/Example1/: template-1.cpp
tests/unit-tests/OpenSources/LetCode/: template-2.cpp
